Ser realizo resumen

--- a/website/index.html
+++ b/website/index.html
@@ -84,6 +84,125 @@
     </div>
   </section>
 
+  <section class="resume" id="resume">
+    <h1 class="heading">Mi <span>resumen</span></h1>
+    <div class="col-container">
+      <div class="col">
+        <h2>education</h2>
+        <div class="box">
+          <span><i class="material-icons">event</i> 12-Feb-2021 </span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+      </div>
+      <div class="col">
+        <h2>education</h2>
+        <div class="box">
+          <span><i class="material-icons">event</i> 12-Feb-2021 </span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+        <div class="box">
+          <span class="material-icons">event</span>
+          <h3>Ing Informatica </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ad corrupti alias optio modi? Accusantium incidunt
+            exercitationem iusto hic totam?
+          </p>
+          <p class="university">Huancayo-Peru</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
