se realizo la parte de footer y about

--- a/website/index.html
+++ b/website/index.html
@@ -203,6 +203,31 @@
     </div>
   </section>
 
+  <section class="about" id="about">
+    <div class="box-container">
+      <div class="box">
+        <div class="image">
+          <img src="camino.jpg" alt="" srcset="">
+        </div>
+      </div>
+      <div class="box">
+        <div class="heading">About <span>Me</span></div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum iusto ab facere, dicta temporibus harum, magnam saepe reiciendis ipsa debitis, deleniti quibusdam. Exercitationem ad tempora eaque minima. Facilis dolorem modi cupiditate obcaecati. Doloremque nemo mollitia quasi odit enim inventore neque reiciendis aut, ipsam similique facere aliquid facilis pariatur maiores repellendus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, libero dolore! Praesentium possimus eligendi explicabo in magnam impedit eum consectetur, suscipit et. Numquam, molestias earum!</p>
+        <a href="" class="btn">Hire me</a>
+        <a href="" class="btn">Descargar CV</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="footer" id="footer">
+    <div class="socials">
+      <ion-icon name="logo-google"></ion-icon>
+      <ion-icon name="logo-twitter"></ion-icon>
+      <ion-icon name="logo-linkedin"></ion-icon>
+    </div>
+    <p>Desiñedo por 8mac</p>
+  </section>
 </body>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
