Se realizo footer js

--- a/website/index.html
+++ b/website/index.html
@@ -13,11 +13,12 @@
 <body>
 
 <header class="header">
-  <a href=""><i class="menu material-icons">menu</i></a>
+  <a><i class="menu material-icons">menu</i></a>
   <nav class="navbar">
-    <a href="">Proyectos</a>
-    <a href="">Resumen</a>
-    <a href="">Contacto</a>
+    <a href="#">Home</a>
+    <a href="#portfolio">Proyectos</a>
+    <a href="#resume">Resumen</a>
+    <a href="#contact">Contacto</a>
   </nav>
 </header>
 
@@ -216,6 +217,40 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, libero dolore! Praesentium possimus eligendi explicabo in magnam impedit eum consectetur, suscipit et. Numquam, molestias earum!</p>
         <a href="" class="btn">Hire me</a>
         <a href="" class="btn">Descargar CV</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact" id="contact">
+    <h1 class="heading">get <span>in touch</span></h1>
+    <div class="col-container">
+      <div class="col">
+        <h2>Get intouch</h2>
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Write a message"></textarea>
+        <a href="#" class="btn">Send message</a>
+      </div>
+      <div class="col">
+        <h2>Lorem, ipsum dolor.</h2>
+        <p>lorem ipsum</p>
+        <span>site@gmailc.om</span>
+        <br><br>
+
+        <p>lorem ipsum</p>
+        <span>site@gmailc.om</span>
+        <br><br>
+
+        <p>lorem ipsum</p>
+        <span>site@gmailc.om</span>
+        <br><br>
+
+        <p>lorem ipsum</p>
+        <span>site@gmailc.om</span>
+        <br><br>
+      </div>
+
       </div>
     </div>
   </section>
